changed nav bar

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do you even log?</title>
     <link href="/css/output.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <!-- npx tailwindcss -i ./public/css/tailwind.css -o ./public/css/output.css --watch -->
 </head>
 <body>
