--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<header class="bg-dyelred w-full">
+<!--<header class="bg-dyelred w-full">
     <nav class="bg-dyelred p-2 w-full flex justify-between content-center mx-auto md:max-w-screen-lg">
         <div><a href="/dashboard"><img src="/img/logo_icon.svg" alt="Do you even log?" class="inline-block w-1/2"></a></div>
         <div class="self-center">
@@ -6,4 +6,43 @@
             <a href="/logout" class="inline-block bg-dyelred2 text-xs text-white rounded p-2 hover:bg-red-700 md:text-sm">Log out</a>
         </div>
     </nav>
-</header>
+</header>-->
+
+
+<nav class="bg-dyelred px-2 sm:px-4 py-2.5 dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600">
+  <div class="container flex flex-wrap justify-between items-center mx-auto">
+
+    <!-- logo -->
+    <a href="/dashboard" class="flex items-center">
+        <img src="/img/logo_icon.svg" class="mr-3 h-6 sm:h-9" alt="Do you even log logo">
+    </a>
+    
+    <div class="flex md:order-2">
+        <button type="button" class="text-white bg-dyelred2 hover:bg-red-700 focus:ring-2 focus:outline-none focus:ring-dyelred2 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0">Log out</button>
+        
+        <!-- mobile menu toggle -->
+        <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 text-sm text-white rounded-lg md:hidden focus:outline-none focus:ring-2 focus: ring-dyelred2" aria-controls="navbar-sticky" aria-expanded="false">
+          <span class="sr-only">Open main menu</span>
+          <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+        </button>
+    </div>
+
+    <div class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+      <ul class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <li>
+          <a href="#" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">Dashboard</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Workouts</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Food</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  
