--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
 <!--<script src="/js/main.js" type="text/javascript"></script>-->
+<script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 
 </body>
 </html>
