--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,21 +1,8 @@
-<!--<header class="bg-dyelred w-full">
-    <nav class="bg-dyelred p-2 w-full flex justify-between content-center mx-auto md:max-w-screen-lg">
-        <div><a href="/dashboard"><img src="/img/logo_icon.svg" alt="Do you even log?" class="inline-block w-1/2"></a></div>
-        <div class="self-center">
-            <span class="text-white text-xs md:text-sm"><%= user.userName %></span>
-            <a href="/logout" class="inline-block bg-dyelred2 text-xs text-white rounded p-2 hover:bg-red-700 md:text-sm">Log out</a>
-        </div>
-    </nav>
-</header>-->
-
-
 <nav class="bg-dyelred px-2 py-2 fixed w-full z-20 top-0 left-0">
-  <div class="container flex flex-wrap justify-between items-center mx-auto">
+    <div class="container flex flex-wrap justify-between items-center mx-auto">
 
     <!-- logo -->
-    <a href="/dashboard" class="flex items-center">
-        <img src="/img/logo_icon.svg" class="mr-3 h-6 sm:h-9" alt="Do you even log logo">
-    </a>
+    <a href="/dashboard" class="flex items-center"><img src="/img/logo_icon.svg" class="mr-3 h-6 sm:h-9" alt="Do you even log logo"></a>
     
     <div class="flex md:order-2">
         <button type="button" class="text-white bg-dyelred2 hover:bg-red-700 focus:ring-2 focus:outline-none focus:ring-dyelred2 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0">Log out</button>
@@ -30,13 +17,12 @@
     <!-- navigation -->
     <div class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
       <ul class="flex flex-col p-0 mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0">
-        <li><a href="/dashboard" class="block py-2 pr-4 pl-3 text-white rounded hover:bg-dyelred2 md:p-2" aria-current="page">Dashboard</a></li>
-        <li><a href="/workouts" class="block py-2 pr-4 pl-3 text-white rounded hover:bg-dyelred2 md:p-2">Workouts</a></li>
-        <li><a href="/food" class="block py-2 pr-4 pl-3 text-white rounded hover:bg-dyelred2 md:p-2">Food</a></li>
-        <li><a href="/about" class="block py-2 pr-4 pl-3 text-white rounded hover:bg-dyelred2 md:p-2">About</a></li>
+        <li><a href="/dashboard" class="block py-2 pr-4 pl-3 text-white rounded-lg hover:bg-dyelred2 md:p-2" aria-current="page">Dashboard</a></li>
+        <li><a href="/workouts" class="block py-2 pr-4 pl-3 text-white rounded-lg hover:bg-dyelred2 md:p-2">Workouts</a></li>
+        <li><a href="/food" class="block py-2 pr-4 pl-3 text-white rounded-lg hover:bg-dyelred2 md:p-2">Food</a></li>
+        <li><a href="/about" class="block py-2 pr-4 pl-3 text-white rounded-lg hover:bg-dyelred2 md:p-2">About</a></li>
       </ul>
     </div>
 
   </div>
 </nav>
-  
