added about page

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,6 +3,7 @@
 <%- include("partials/container.ejs") %>
 
 <h1 class="text-3xl mb-4">Dashboard</h1>
+<p class="text-xs">Hi <%= user.userName %></p>
 
 <section class="mt-4 grid lg:grid-cols-3 sm:grid-cols-1 gap-4">
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
