--- a/views/food/add.ejs
+++ b/views/food/add.ejs
@@ -33,7 +33,7 @@
 
         <div>
             <input type="submit" value="Add" class="inline-block bg-dyelred2 px-4 py-2 mb-2 rounded-lg text-sm text-white font-semibold hover:bg-red-700">
-            <a href="/workouts" class="inline-block bg-gray-400 px-4 py-2 mb-2 rounded-lg text-sm text-white font-semibold hover:bg-gray-700">Cancel</a>
+            <a href="/food" class="inline-block bg-gray-400 px-4 py-2 mb-2 rounded-lg text-sm text-white font-semibold hover:bg-gray-700">Cancel</a>
         </div>
     </form>
 </div>
