edited food page

--- a/views/food/add.ejs
+++ b/views/food/add.ejs
@@ -27,8 +27,13 @@
         </div>
 
         <div class="mb-4">
-            <label for="food" class="block text-gray-700 text-sm font-bold mb-2">Calories</label>
+            <label for="calories" class="block text-gray-700 text-sm font-bold mb-2">Calories</label>
             <input type="number" name="calories" id="calories" class="shadow border border-slate-300 rounded-lg w-full py-2 px-3 text-gray-700 text-sm">
+        </div>
+
+        <div class="mb-4">
+            <label for="protein" class="block text-gray-700 text-sm font-bold mb-2">Protein</label>
+            <input type="number" name="protein" id="protein" class="shadow border border-slate-300 rounded-lg w-full py-2 px-3 text-gray-700 text-sm">
         </div>
 
         <div>
