--- a/views/food/edit.ejs
+++ b/views/food/edit.ejs
@@ -51,6 +51,16 @@
                     <input type="text" name="food" id="food" value="<%= food.food %>" class="shadow border border-slate-300 rounded-lg w-full py-2 px-3 text-gray-700 text-sm">
                 </div>
 
+                <div class="mb-4">
+                    <label for="calories" class="block text-gray-700 text-sm font-bold mb-2">Calories</label>
+                    <input type="text" name="calories" id="calories" value="<%= food.calories %>" class="shadow border border-slate-300 rounded-lg w-full py-2 px-3 text-gray-700 text-sm">
+                </div>
+
+                <div class="mb-4">
+                    <label for="protein" class="block text-gray-700 text-sm font-bold mb-2">Protein</label>
+                    <input type="text" name="protein" id="protein" value="<%= food.protein %>" class="shadow border border-slate-300 rounded-lg w-full py-2 px-3 text-gray-700 text-sm">
+                </div>
+
                 <div class="flex gap-1">
                     <input type="submit" value="Save" class="inline-block bg-dyelred2 px-4 py-2 mb-2 rounded-lg text-sm text-white font-semibold hover:bg-red-700">
             </form>
