--- a/views/main/dashboard.ejs
+++ b/views/main/dashboard.ejs
@@ -7,11 +7,13 @@
 
 <h2 class="text-2xl">Workouts</h2>
 <section class="mt-2 grid lg:grid-cols-3 sm:grid-cols-1 gap-4 mb-4">
+    <!-- get most recent date -->
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
         <h2 class="text-sm font-medium text-dyelred2">Recent workout</h2>
         <p class="text-lg font-medium"><%= exerciseDates[0]['_id'] %></p>
     </div>
 
+    <!-- total number of dates -->
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
         <h2 class="text-sm font-medium text-dyelred2">Total workouts</h2>
         <p class="text-lg font-medium"><%= Object.keys(exerciseDates).length %></p>
@@ -21,6 +23,27 @@
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
         <h2 class="text-sm font-medium text-dyelred2">Total exercises</h2>
         <p class="text-lg font-medium"><%= exerciseCount %></p>
+    </div>
+</section>
+
+<h2 class="text-2xl">Food</h2>
+<section class="mt-2 grid lg:grid-cols-3 sm:grid-cols-1 gap-4 mb-4">
+    <!-- get most recent date -->
+    <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
+        <h2 class="text-sm font-medium text-dyelred2">Recent log</h2>
+        <p class="text-lg font-medium"><%= foodDates[0]['_id'] %></p>
+    </div>
+
+    <!-- total number of dates -->
+    <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
+        <h2 class="text-sm font-medium text-dyelred2">Total days logged</h2>
+        <p class="text-lg font-medium"><%= Object.keys(foodDates).length %></p>
+    </div>
+
+    <!-- number of workouts logged -->
+    <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
+        <h2 class="text-sm font-medium text-dyelred2">Total food</h2>
+        <p class="text-lg font-medium"><%= foodCount %></p>
     </div>
 </section>
 
