deleted unused files and updated views links

--- a/views/partials/intro_top.ejs
+++ b/views/partials/intro_top.ejs
@@ -3,4 +3,4 @@
         <div>
             <img src="/img/logo.svg" alt="Do you even log?" class="mx-auto lg:w-3/6 md:w-full">
 
-            <p class="text-dyelred3">Track your workouts</p>
+            <p class="text-dyelred3">Track your workouts and diet</p>
