fixed logout button

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
     <a href="/dashboard" class="flex items-center"><img src="/img/logo_icon.svg" class="mr-3 h-6 sm:h-9" alt="Do you even log logo"></a>
     
     <div class="flex md:order-2">
-        <button type="button" class="text-white bg-dyelred2 hover:bg-red-700 focus:ring-2 focus:outline-none focus:ring-dyelred2 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0">Log out</button>
+        <a href="/logout" class="text-white bg-dyelred2 hover:bg-red-700 focus:ring-2 focus:outline-none focus:ring-dyelred2 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0">Log out</a>
         
         <!-- mobile menu toggle -->
         <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center px-2 text-sm text-white rounded-lg md:hidden focus:outline-none focus:ring-2 focus: ring-dyelred2" aria-controls="navbar-sticky" aria-expanded="false">
