--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,7 +9,11 @@
 <section class="mt-4 grid lg:grid-cols-3 sm:grid-cols-1 gap-4">
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
         <h2 class="text-sm font-medium text-dyelred2">Recent workout</h2>
-        <p class="text-lg font-medium"><%= exercises[0].date %></p>
+        <% if(exercises[0]) { %>
+            <p class="text-lg font-medium"><%= exercises[0].date %></p>
+        <% } else { %>
+            <p class="text-lg font-medium">None</p>
+        <% } %>
     </div>
 
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
