--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,7 @@
 <!--<script src="/js/main.js" type="text/javascript"></script>-->
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
+<script src="/js/plate-calculator.js"></script>
+<script src="/js/main.js"></script>
 
 </body>
 </html>
