added rest timer

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,9 +4,7 @@
     <!-- logo -->
     <a href="/dashboard" class="flex items-center"><img src="/img/logo_icon.svg" class="mr-3 h-6 sm:h-9" alt="Do you even log logo"></a>
     
-    <div class="flex md:order-2">
-        <a href="/logout" class="text-white bg-dyelred2 hover:bg-red-700 focus:ring-2 focus:outline-none focus:ring-dyelred2 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0">Log out</a>
-        
+    <div class="flex md:order-2">        
         <!-- mobile menu toggle -->
         <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center px-2 text-sm text-white rounded-lg md:hidden focus:outline-none focus:ring-2 focus: ring-dyelred2" aria-controls="navbar-sticky" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
@@ -21,6 +19,7 @@
         <li><a href="/workouts" class="block py-2 pr-4 pl-3 text-white rounded-lg hover:bg-dyelred2 md:p-2">Workouts</a></li>
         <li><a href="/food" class="block py-2 pr-4 pl-3 text-white rounded-lg hover:bg-dyelred2 md:p-2">Food</a></li>
         <li><a href="/about" class="block py-2 pr-4 pl-3 text-white rounded-lg hover:bg-dyelred2 md:p-2">About</a></li>
+        <li><a href="/logout" class="block py-2 pr-4 pl-3 text-white rounded-lg hover:bg-dyelred2 md:p-2">Log out</a></li>
       </ul>
     </div>
 
