--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
                 <input type="password" name="password" placeholder="Password" class="shadow border rounded w-full py-2 px-3 text-gray-700 text-sm">
             </div>
             <div class="pb-4">
-                <input type="submit" class="rounded border border-transparent bg-dyelred2 px-5 py-2 font-medium text-white hover:bg-red-700" value="Sign In">
+                <input type="submit" class="rounded border border-transparent bg-dyelred2 px-5 py-2 font-medium text-white hover:bg-red-700" value="Log In">
             </div>
         </form>
     </div>
