--- a/views/workouts/rest-timer.ejs
+++ b/views/workouts/rest-timer.ejs
@@ -9,9 +9,9 @@
 
     <form>
         <div class="flex gap-2 items-center">
-            <input type="number" name="min" id="min" min="0" max="59" placeholder="Min" class="shadow border border-slate-300 rounded-lg p-2 text-sm">
+            <input type="number" name="min" id="min" min="0" max="59" placeholder="Min" class="shadow border border-slate-300 rounded-lg p-2 text-sm focus:ring-dyelred2 focus:border-dyelred2">
             <span>:</span>
-            <input type="number" name="sec" id="sec" min="0" max="59" placeholder="Sec" class="shadow border border-slate-300 rounded-lg p-2 text-sm">
+            <input type="number" name="sec" id="sec" min="0" max="59" placeholder="Sec" class="shadow border border-slate-300 rounded-lg p-2 text-sm focus:ring-dyelred2 focus:border-dyelred2">
         </div>
 
         <div class="flex gap-2 items-center">
