--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1315,6 +1315,18 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.accent-dyelred {
+  accent-color: #581c2f;
+}
+
+.accent-dyelred2 {
+  accent-color: #d44553;
+}
+
+.accent-pink-50 {
+  accent-color: #FDF2F8;
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1352,6 +1364,16 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
+.hover\:ring-dyelred2:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(212 69 83 / var(--tw-ring-opacity));
+}
+
+.focus\:border-dyelred2:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(212 69 83 / var(--tw-border-opacity));
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1361,6 +1383,11 @@ input[type="range"]::-ms-fill-lower {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-dyelred2:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(212 69 83 / var(--tw-ring-opacity));
 }
 
 @media (min-width: 640px) {
