--- a/views/workouts/edit.ejs
+++ b/views/workouts/edit.ejs
@@ -10,17 +10,17 @@
             <form action="/workouts/edit/<%= exercise._id %>" method="POST">
                 <div class="mb-4">
                     <label for="date" class="block text-gray-700 text-sm font-bold mb-2">Date</label>
-                    <input type="date" name="date" id="date" value="<%= exercise.date %>" class="border border-slate-300 rounded-lg p-2 text-sm">
+                    <input type="date" name="date" id="date" value="<%= exercise.date %>" class="border border-slate-300 rounded-lg p-2 text-sm  focus:ring-dyelred2 focus:border-dyelred2">
                 </div>
 
                 <div class="mb-4">
                     <label for="exercise" class="block text-gray-700 text-sm font-bold mb-2">Exercise</label>
-                    <input type="text" value="<%= exercise.exercise %>" name="exercise" id="exercise" class="shadow border border-slate-300 rounded-lg w-full py-2 px-3 text-gray-700 text-sm">
+                    <input type="text" value="<%= exercise.exercise %>" name="exercise" id="exercise" class="shadow border border-slate-300 rounded-lg w-full py-2 px-3 text-gray-700 text-sm focus:ring-dyelred2 focus:border-dyelred2">
                 </div>
 
                     <div class="mb-4">
                         <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Description</label>
-                        <textarea name="description" id="description" cols="30" rows="4" class="shadow border border-slate-300 rounded-lg w-full py-2 px-3 text-gray-700 text-sm"><%= exercise.description %></textarea>
+                        <textarea name="description" id="description" cols="30" rows="4" class="shadow border border-slate-300 rounded-lg w-full py-2 px-3 text-gray-700 text-sm focus:ring-dyelred2 focus:border-dyelred2"><%= exercise.description %></textarea>
                     </div>
 
                 <div class="flex gap-1">
