--- a/views/workouts/plate-calculator.ejs
+++ b/views/workouts/plate-calculator.ejs
@@ -14,43 +14,43 @@
     <form>
         <!-- 2.5 lbs -->
         <div class="mb-4">
-            <input type="checkbox" name="plates" id="plate2-5" value="2.5" class="shadow border border-slate-300 rounded-md p-2 text-sm" checked>
+            <input type="checkbox" name="plates" id="plate2-5" value="2.5" class="shadow border border-slate-300 rounded-md p-2 text-sm text-dyelred2 focus:ring-dyelred2" checked>
             <label for="plate2-5" class="text-gray-700 text-sm mb-2">2.5 lbs</label>
         </div>
 
         <!-- 5 lbs -->
         <div class="mb-4">
-            <input type="checkbox" name="plates" id="plate5" value="5" class="shadow border border-slate-300 rounded-md p-2 text-sm" checked>
+            <input type="checkbox" name="plates" id="plate5" value="5" class="shadow border border-slate-300 rounded-md p-2 text-sm text-dyelred2 focus:ring-dyelred2" checked>
             <label for="plate5" class="text-gray-700 text-sm mb-2">5 lbs</label>
         </div>
         
         <!-- 10 lbs -->
         <div class="mb-4">
-            <input type="checkbox" name="plates" id="plate10" value="10" class="shadow border border-slate-300 rounded-md p-2 text-sm" checked>
+            <input type="checkbox" name="plates" id="plate10" value="10" class="shadow border border-slate-300 rounded-md p-2 text-sm text-dyelred2 focus:ring-dyelred2" checked>
             <label for="plate10" class="text-gray-700 text-sm mb-2">10 lbs</label>
         </div>
 
         <!-- 25 lbs -->
         <div class="mb-4">
-            <input type="checkbox" name="plates" id="plate25" value="25" class="shadow border border-slate-300 rounded-md p-2 text-sm" checked>
+            <input type="checkbox" name="plates" id="plate25" value="25" class="shadow border border-slate-300 rounded-md p-2 text-sm text-dyelred2 focus:ring-dyelred2" checked>
             <label for="plate25" class="text-gray-700 text-sm mb-2">25 lbs</label>
         </div>
 
         <!-- 35 lbs -->
         <div class="mb-4">
-            <input type="checkbox" name="plates" id="plate35" value="35" class="shadow border border-slate-300 rounded-md p-2 text-sm" checked>
+            <input type="checkbox" name="plates" id="plate35" value="35" class="shadow border border-slate-300 rounded-md p-2 text-sm text-dyelred2 focus:ring-dyelred2" checked>
             <label for="plate35" class="text-gray-700 text-sm mb-2">35 lbs</label>
         </div>
 
         <!-- 45 lbs -->
         <div class="mb-4">
-            <input type="checkbox" name="plates" id="plate45" value="45" class="shadow border border-slate-300 rounded-md p-2 text-sm" checked>
+            <input type="checkbox" name="plates" id="plate45" value="45" class="shadow border border-slate-300 rounded-md p-2 text-sm text-dyelred2 focus:ring-dyelred2" checked>
             <label for="plate45" class="text-gray-700 text-sm mb-2">45 lbs</label>
         </div>
 
         <div class="mb-4">
             <label for="weight" class="text-gray-700 text-sm mb-2 font-medium">Weight (lbs)</label>
-            <input type="number" name="weight" id="weight" placeholder="Enter a number" class="block shadow border border-slate-300 p-2 text-sm rounded-lg mt-2">
+            <input type="number" name="weight" id="weight" placeholder="Enter a number" class="block shadow border border-slate-300 p-2 text-sm rounded-lg mt-2 focus:ring-dyelred2 focus:border-dyelred2">
         </div>
 
         <button type="button" class="block bg-dyelred2 px-4 py-2 mb-2 rounded-lg text-sm text-white font-semibold hover:bg-red-700" onClick="calculatePlates()">Calculate</button>
