--- a/views/workouts/rest-timer.ejs
+++ b/views/workouts/rest-timer.ejs
@@ -5,7 +5,7 @@
 <h1 class="text-3xl mb-4">Rest timer</h1>
 
 <section class="md:w-max border border-gray-200 bg-white shadow-md rounded p-4">
-    <h2 class="text-6xl font-bold mb-4" id="time">0:00</h2>
+    <h2 class="text-6xl font-bold mb-4 text-dyelred2" id="time">0:00</h2>
 
     <form>
         <div class="flex gap-2 items-center">
