--- a/views/workouts/workouts.ejs
+++ b/views/workouts/workouts.ejs
@@ -4,7 +4,7 @@
 
 <h1 class="text-3xl mb-4">Workouts</h1>
 
-<nav class="flex lg:flex-row md:flex-col gap-2 text-center">
+<nav class="flex gap-2 text-center">
 <p><a href="/workouts/add" class="inline-block bg-dyelred2 px-4 py-2 mb-2 rounded-lg text-sm font-semibold text-white hover:bg-red-700">Add exercise</a></p>
 <p><a href="/workouts/plate-calculator" class="inline-block bg-dyelred2 px-4 py-2 mb-2 rounded-lg text-sm font-semibold text-white hover:bg-red-700">Plate calculator</a></p>
 <p><a href="/workouts/rest-timer" class="inline-block bg-dyelred2 px-4 py-2 mb-2 rounded-lg text-sm font-semibold text-white hover:bg-red-700">Rest timer</a></p>
