--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,9 +76,7 @@
 <footer class="p-4 bg-gray-800 sm:p-6">
     <div class="mx-auto max-w-screen-xl">
         <div class="mb-6 md:mb-0">
-            <a href="/" class="flex items-center">
-                <img src="/img/logo.svg" class="mr-3 h-8" alt="Do you even log? Logo">
-            </a>
+            <img src="/img/logo.svg" class="flex items-center mr-3 h-8" alt="Do you even log? Logo">
         </div>
 
         <div class="mt-6">
