--- a/views/main/about.ejs
+++ b/views/main/about.ejs
@@ -13,14 +13,14 @@
 
     <!-- total number of dates -->
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
-        <h2 class="text-sm font-medium text-dyelred2">Last updated</h2>
+        <h2 class="text-sm font-medium text-dyelred2">Updated</h2>
         <p class="text-lg font-medium">2022/09/22</p>
     </div>
 
     <!-- number of workouts logged -->
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
-        <h2 class="text-sm font-medium text-dyelred2">Total exercises</h2>
-        <p class="text-lg font-medium">Text</p>
+        <h2 class="text-sm font-medium text-dyelred2">Code</h2>
+        <a href="https://github.com/ruinaz90/do-you-even-log" class="text-lg font-medium">GitHub</a>
     </div>
 </section>
 
