--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,14 +22,14 @@
         <form action="/login" method="POST" class="bg-white shadow-md rounded px-8 pt-6 mb-4">
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2 text-left" for="email">Email</label>
-                <input type="email" name="email" placeholder="Email" class="shadow border rounded w-full py-2 px-3 text-gray-700 text-sm">
+                <input type="email" name="email" placeholder="Email" class="shadow border border-slate-300 rounded w-full py-2 px-3 text-gray-700 text-sm focus:ring-dyelred2 focus:border-dyelred2">
             </div>
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2 text-left" for="password">Password</label>
-                <input type="password" name="password" placeholder="Password" class="shadow border rounded w-full py-2 px-3 text-gray-700 text-sm">
+                <input type="password" name="password" placeholder="Password" class="shadow border border-slate-300 rounded w-full py-2 px-3 text-gray-700 text-sm focus:ring-dyelred2 focus:border-dyelred2">
             </div>
             <div class="pb-4">
-                <input type="submit" class="rounded border border-transparent bg-dyelred2 px-5 py-2 font-medium text-white hover:bg-red-700" value="Log In">
+                <input type="submit" class="rounded-lg border border-transparent bg-dyelred2 px-5 py-2 font-medium text-white hover:bg-red-700" value="Log In">
             </div>
         </form>
     </div>
